@@ -6,6 +6,9 @@
 #
 # Updated: 02 APR 2024
 # - Fix macOS version detection issue that crept in a while back
+# - Make the various build helpers more uniform (part 1)
+# - No longer default to Aethra.  --flavor= must be specified.
+#   There was too much confusion having a default flavor.
 #
 # Updated: 10 MAR 2024
 # - Add support for Sparky Linux
